--- a/app/app.html
+++ b/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu *ngIf="currentUser" [content]="content">
+<ion-menu [content]="content"><!-- *ngIf="currentUser" -->
 
   <ion-content>
     <ion-list>
